--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,20 @@
-name: build
+name: Build & Snapshot
 
 on:
   workflow_dispatch:
   push:
     branches:
       - main
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'spec/**'
+      - 'LICENSE'
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+# Cancel previous runs if a new commit is pushed to main (saves money/time)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: write
@@ -14,7 +22,10 @@ permissions:
 
 jobs:
   build:
+    name: Build Native Binary
     runs-on: ubuntu-latest
+    timeout-minutes: 15 # Safety limit
+
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -22,21 +33,39 @@ jobs:
           fetch-depth: 0
           fetch-tags: true # Ensure all tags are fetched for goreleaser to work correctly
 
-      - name: Install dependencies (Ripgrep & FZF)
+      - name: Install System Dependencies (Ripgrep & FZF)
         run: |
           sudo apt-get update
           sudo apt-get install -y ripgrep fzf
 
-      - uses: actions/setup-go@v5
+      - name: Setup Go 1.24.x
+        uses: actions/setup-go@v5
         with:
           go-version: '1.24.x'
           cache: true
           cache-dependency-path: go.sum
 
       - run: go mod download
+        env:
+          # Ensure tests run in "Native" mode
+          CGO_ENABLED: 0
 
-      - uses: goreleaser/goreleaser-action@ec59f474b9834571250b370d4735c50f8e2d1e29
+      - name: Build Snapshot
+        uses: goreleaser/goreleaser-action@ec59f474b9834571250b370d4735c50f8e2d1e29
         with:
+          category: goreleaser-${{ github.run_id }}
           distribution: goreleaser
           version: 2.13.3
-          args: build --snapshot --clean
+          args: build --snapshot --clean --skip=publish
+        env:
+          # Critical for your macOS Catalina support
+          CGO_ENABLED: 0
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Binaries
+        uses: actions/upload-artifact@v4
+        with:
+          name: opencode-binaries
+          path: dist/*.tar.gz
+          retention-days: 5
+          if-no-files-found: error
