--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -94,5 +94,5 @@ jobs:
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: report.sarif
-          category: golangci-lint
+          category: golangci-lint-${{ github.run_id }}
           token: ${{ secrets.GITHUB_TOKEN }}
