--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,39 +1,68 @@
 # Dependency Review Action
-#
-# This Action will scan dependency manifest files that change as part of a Pull Request,
-# surfacing known-vulnerable versions of the packages declared or updated in the PR.
-# Once installed, if the workflow run is marked as required, PRs introducing known-vulnerable
-# packages will be blocked from merging.
-#
-# Source repository: https://github.com/actions/dependency-review-action
-# Public documentation: https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain/about-dependency-review#dependency-review-enforcement
-name: 'Dependency review'
+# Enforces security and license compliance on Pull Requests.
+name: 'Dependency Review'
+
 on:
   pull_request:
     branches: [ "main" ]
 
-# If using a dependency submission action in this workflow this permission will need to be set to:
-#
-# permissions:
-#   contents: write
-#
-# https://docs.github.com/en/enterprise-cloud@latest/code-security/supply-chain-security/understanding-your-software-supply-chain/using-the-dependency-submission-api
 permissions:
   contents: read
-  # Write permissions for pull-requests are required for using the `comment-summary-in-pr` option, comment out if you aren't using this option
+  # Write permissions are needed to post comments on the PR
   pull-requests: write
 
 jobs:
   dependency-review:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout repository'
+      - name: 'Checkout Repository'
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      # ENFORCE GO 1.24.x
+      # This ensures the dependency graph resolution uses the correct toolchain
+      - name: 'Setup Go'
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24.x'
+          check-latest: true
+
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@v4
-        # Commonly enabled options, see https://github.com/actions/dependency-review-action#configuration-options for all available options.
         with:
+          # 1. VISIBILITY
+          # Always post a comment on the PR summarizing changes
           comment-summary-in-pr: always
-        #   fail-on-severity: moderate
-        #   deny-licenses: GPL-1.0-or-later, LGPL-2.0-or-later
-        #   retry-on-snapshot-warnings: true
+
+          # 2. SECURITY MODERATION
+          # Block merging if a dependency has 'high' or 'critical' vulnerabilities.
+          # We skip 'moderate' to avoid noise, but you can change this to 'moderate' if you are paranoid.
+          fail-on-severity: high
+
+          # 3. LICENSE MODERATION (The "Professional" Guard)
+          # We deny strong "Copyleft" licenses that are risky for professional/commercial tooling.
+          # We allow: MIT, Apache-2.0, BSD, ISC, etc.
+          # We deny: GPL (Viral), AGPL (Network Viral), LGPL (Risky for static Go binaries)
+          deny-licenses: >-
+            GPL-2.0-only,
+            GPL-2.0-or-later,
+            GPL-3.0-only,
+            GPL-3.0-or-later,
+            AGPL-1.0-only,
+            AGPL-1.0-or-later,
+            AGPL-3.0-only,
+            AGPL-3.0-or-later,
+            LGPL-2.0-only,
+            LGPL-2.0-or-later,
+            LGPL-2.1-only,
+            LGPL-2.1-or-later,
+            LGPL-3.0-only,
+            LGPL-3.0-or-later,
+            SSPL-1.0
+
+          # 4. ROBUSTNESS
+          # Don't fail if the dependency graph API is temporarily flaky
+          retry-on-snapshot-warnings: true
+
+          allow-ghsas	: GHSA-2c7c-3mj9-8fqh
