--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 permissions:
@@ -33,12 +30,24 @@ jobs:
 
     - name : Run fmt
       run: go fmt ./...
+      env:
+        # Ensure tests run in "Native" mode
+        CGO_ENABLED: 0
 
     - name : Run Vet
       run: go vet ./...
+      env:
+        # Ensure tests run in "Native" mode
+        CGO_ENABLED: 0
 
     - name: Run Test
       run: go test -v ./...
+      env:
+        # Ensure tests run in "Native" mode
+        CGO_ENABLED: 0
 
     - name: Run Build
       run: go build -v ./...
+      env:
+        # Ensure tests run in "Native" mode
+        CGO_ENABLED: 0
