--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,16 +1,52 @@
-name: Greetings
+name: Community Greeting
 
-on: [pull_request_target, issues]
+on:
+  pull_request_target:
+    types: [opened]
+  issues:
+    types: [opened]
+
+permissions:
+  issues: write
+  pull-requests: write
 
 jobs:
   greeting:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: "Message that will be displayed on users' first issue"
-        pr-message: "Message that will be displayed on users' first pull request"
+
+        # 1. ISSUE MESSAGE
+        # explicit guidance on using the templates
+        issue-message: |
+          ## Welcome to OpenCode Native! 🚀
+
+          Thanks for opening your first issue! We are happy to have you here.
+
+          **Please ensure you followed the correct template:**
+
+          *   **🐛 Bug Report:** Did you provide the **OS version** (e.g., Catalina) and **Reproduction Steps**?
+          *   **💡 Feature Request:** Did you explain the *Why* and the *Value*?
+
+          If you opened a blank issue or skipped the template fields, please **edit your issue description** to provide those details. This helps us fix it faster!
+
+          _We typically respond within 24-48 hours._
+
+        # 2. PR MESSAGE
+        # Reinforcing the "Native" constraints + Linking Issues
+        pr-message: |
+          ## Welcome to the Team! 🛠️
+
+          Congratulations on your first Pull Request!
+
+          **Before we review, please ensure:**
+
+          1.  **Linked Issue:** Does this fix a bug? Please link it (e.g., `Fixes #123`).
+          2.  **Native Constraints:**
+              *   Code must compile with **Go 1.24.x**.
+              *   **No CGO** dependencies (to support macOS Catalina).
+              *   Keep it lightweight!
+
+          The CI will run shortly to verify your build. Thank you for contributing! 💻
