--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -89,7 +89,7 @@ jobs:
           # Important: ignore-empty ensures it doesn't fail if no issues found
           skip-cache: false
 
-      - name: Upload results to GitHub
+      - name: Upload SARIF results to GitHub
         if: always()
         uses: github/codeql-action/upload-sarif@v4
         with:
