--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -9,6 +9,11 @@ on:
   schedule:
     - cron: '18 3 * * 5'
 
+# Cancel previous runs if a new commit is pushed to main (saves money/time)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   actions: read
   contents: read
