--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -6,6 +6,11 @@ on:
   issues:
     types: [opened]
 
+# Cancel previous runs if a new commit is pushed to main (saves money/time)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   issues: write
   pull-requests: write
