--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -5,6 +5,11 @@ on:
     # Trigger when PR is opened, or when code is pushed (to update labels)
     types: [opened, synchronize, reopened]
 
+# Cancel previous runs if a new commit is pushed to main (saves money/time)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read        # Required to read .github/labeler.yml
   pull-requests: write  # Required to apply labels
