--- a/.github/workflows/opencommit.yml
+++ b/.github/workflows/opencommit.yml
@@ -6,6 +6,11 @@ on:
     # but you may still ignore other public branches
     branches-ignore: [main master dev development release]
 
+# Cancel previous runs if a new commit is pushed to main (saves money/time)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   opencommit:
     timeout-minutes: 10
